--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,33 @@ SOLID/Single Responsibility Principle/ConsoleUI/ConsoleUI/obj/Release/net6.0/Con
 SOLID/Single Responsibility Principle/ConsoleUI/ConsoleUI/obj/Release/net6.0/ConsoleUI.GlobalUsings.g.cs
 SOLID/Single Responsibility Principle/ConsoleUI/ConsoleUI/.vs/ConsoleUI/v17/.suo
 *.json
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.GlobalUsings.g.cs
+SOLID/Open Close Principle/OCPDemo/.vs/OCPDemo/v17/.suo
+SOLID/Open Close Principle/OCPDemo/OCPDemo/bin/Debug/net6.0/OCPDemo.dll
+SOLID/Open Close Principle/OCPDemo/OCPDemo/bin/Debug/net6.0/OCPDemo.exe
+SOLID/Open Close Principle/OCPDemo/OCPDemo/bin/Debug/net6.0/OCPDemo.pdb
+SOLID/Open Close Principle/OCPDemo/OCPDemo/bin/Debug/net6.0/OCPLibrary.dll
+SOLID/Open Close Principle/OCPDemo/OCPDemo/bin/Debug/net6.0/OCPLibrary.pdb
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/apphost.exe
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.AssemblyInfo.cs
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.csproj.BuildWithSkipAnalyzers
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.csproj.CopyComplete
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.csproj.FileListAbsolute.txt
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.dll
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.GeneratedMSBuildEditorConfig.editorconfig
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/OCPDemo.pdb
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/ref/OCPDemo.dll
+SOLID/Open Close Principle/OCPDemo/OCPDemo/obj/Debug/net6.0/refint/OCPDemo.dll
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/bin/Debug/net6.0/OCPLibrary.dll
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/bin/Debug/net6.0/OCPLibrary.pdb
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.AssemblyInfo.cs
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.csproj.BuildWithSkipAnalyzers
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.csproj.FileListAbsolute.txt
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.dll
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.GeneratedMSBuildEditorConfig.editorconfig
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.GlobalUsings.g.cs
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/OCPLibrary.pdb
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/ref/OCPLibrary.dll
+SOLID/Open Close Principle/OCPDemo/OCPLibrary/obj/Debug/net6.0/refint/OCPLibrary.dll
